--- a/Battery Info/Battery Info.csproj
+++ b/Battery Info/Battery Info.csproj
@@ -5,6 +5,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Battery_Info</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Authors>Joseph .M 101</Authors>
+    <RepositoryType>GitHub Repo</RepositoryType>
+    <RepositoryUrl>https://github.com/JosephM101/Battery-Info</RepositoryUrl>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
